--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div>
             <img src="img/logo.jpg" alt="logo">
         </div>
-        <div>
+        <div class="bottom">
             <a href="page/trabajos.html">Conoce mis trabajos</a>
         </div>
     </main>
