--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- inicio main -->
     <main class="main-home">
         <div>
-            <p>Bienvenido a By Colo Tatto, donde hacemos realidad tu tatto soñado</p>
+            <p class="parrafo">Bienvenido a By Colo Tatto, donde hacemos realidad tu tatto soñado</p>
         </div>
         <div>
             <img src="img/logo.jpg" alt="logo">
