--- a/index.html
+++ b/index.html
@@ -21,8 +21,26 @@
         <div class="div-h1">
             <h1 class="h1">By Colo Tatto</h1>
         </div>
-        
     </header>
+    <!-- inicio nav -->
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: rgb(78, 78, 78);">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" href="page/trabajos.html">Trabajos</a>
+              <a class="nav-link" href="page/videos.html">Videos</a>
+              <a class="nav-link" href="page/temporales.html">Tatto temporales</a>
+              <a class="nav-link" href="page/Contacto.html">Contacto</a>
+              <a class="nav-link disabled"></a>
+            </div>
+          </div>
+        </div>
+      </nav>
     <!-- inicio main -->
     <main class="main-home">
         <div>
